gke/lgr-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-api
spec:
  type: NodePort
  selector:
    app: lgr-api
  ports:
    - port: 80
      targetPort: 80
