gke/lgr-forumsvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-forumsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgr-forumsvc
  template:
    metadata:
      labels:
        app: lgr-forumsvc
    spec:
      containers:
      - name: lgr-forumsvc
        image: us-east1-docker.pkg.dev/letsgorip/lgr-repo/lgrforumsvc:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "64Mi"
            cpu: "0.05"
          requests:
            memory: "32Mi"
            cpu: "0.03"
        ports:
          - containerPort: 9002
        env:
          - name: DB_USER
            valueFrom:
              configMapKeyRef:
                name: lgr-forumsvc-config
                key: db_user
          - name: DB_PASS
            valueFrom:
              secretKeyRef:
                name: pg-secrets
                key: db_pass
          - name: DB_HOST
            valueFrom:
              configMapKeyRef:
                name: lgr-forumsvc-config
                key: db_host
          - name: DB_NAME
            valueFrom:
              configMapKeyRef:
                name: lgr-forumsvc-config
                key: db_name
          - name: DB_PORT
            valueFrom:
              configMapKeyRef:
                name: lgr-forumsvc-config
                key: db_port
          - name: FORUMSVC_PORT
            valueFrom:
              configMapKeyRef:
                name: lgr-forumsvc-config
                key: forumsvc_port
