gke/lgr-forumsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-forumsvc
spec:
  selector:
    app: lgr-forumsvc
  ports:
    - port: 9002
      targetPort: 9002
