gke/lgr-placesvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lgr-placesvc
spec:
  selector:
    app: lgr-placesvc
  ports:
    - port: 9003
      targetPort: 9003
