gke/lgr-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgr-ui
  template:
    metadata:
      labels:
        app: lgr-ui
    spec:
      containers:
      - name: lgr-ui
        image: us-east1-docker.pkg.dev/letsgorip/lgr-repo/lgrui:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "64Mi"
            cpu: "0.05"
          requests:
            memory: "32Mi"
            cpu: "0.03"
        ports:
          - containerPort: 80
