gke/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgr-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgr-postgres
  template:
    metadata:
      labels:
        app: lgr-postgres
    spec:
      containers:
      - name: lgr-postgres
        image: postgres:alpine
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "64Mi"
            cpu: "0.05"
          requests:
            memory: "32Mi"
            cpu: "0.03"
        ports:
          - containerPort: 5432
        env:
          - name: PGDATA
            value: /var/lib/postgresql/data/pgdata
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: pg-secrets
                key: db_pass
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: lgr-pg-storage
      volumes:
      - name: lgr-pg-storage
        persistentVolumeClaim:
          claimName: lgr-pg-pv-data
          readOnly: false
